@@ -30,6 +30,95 @@ typedef struct stDVDVideoPicture
 }
 DVDVideoPicture;
 
+class CDVDVideoPicture
+{
+public:
+
+  CDVDVideoPicture()
+  {
+    m_iRefCount = 1;
+
+    iWidth = iHeight = 0;
+    iDisplayWidth = iDisplayHeight = 0;
+    
+    pts = 0LL;
+    iFlags = 0;
+    iRepeatPicture = 0;
+    iDuration = 0;
+
+    iFrameType = 0;
+
+    data[0] = NULL;
+    data[1] = NULL;
+    data[2] = NULL;
+    data[3] = NULL;
+
+    iLineSize[0] = 0;
+    iLineSize[1] = 0;
+    iLineSize[2] = 0;
+    iLineSize[3] = 0;    
+  }
+
+  void Allocate_YV12(unsigned int width, unsigned int height)
+  {
+
+    //Allocate for YV12 frame
+    unsigned int iPixels = width*height;
+    iLineSize[0] = width;   //Y
+    iLineSize[1] = width/2; //U
+    iLineSize[2] = width/2; //V
+    iLineSize[3] = 0;
+
+    iWidth = width;
+    iHeight = height;
+
+    data[0] = new BYTE[iPixels + iPixels/4 + iPixels/4];  //Y
+    data[1] = data[0] + iPixels;                          //U
+    data[2] = data[0] + iPixels + iPixels/4;              //V
+    data[3] = 0;
+  }
+
+  void Deallocate()
+  {
+    if( data[0] ) delete data[0];
+
+    for( int i = 0; i < 4; i++ )
+    {
+      data[i] = 0;
+      iLineSize[i] = 0;
+    }
+
+  }
+
+  int AddRef()  {return ++m_iRefCount;}
+  int Release() 
+  {
+    int iCount = --m_iRefCount;
+    if( iCount == 0 )
+      delete this;
+    return iCount;
+  }
+
+  __int64 pts; // timestamp in seconds, used in the CDVDPlayer class to keep track of pts
+  BYTE* data[4];      // [4] = alpha channel, currently not used
+  int iLineSize[4];   // [4] = alpha channel, currently not used
+
+  unsigned int iFlags;
+  
+  unsigned int iRepeatPicture;
+  unsigned int iDuration;
+  int iFrameType; // see defines above // 1->I, 2->P, 3->B, 0->Undef
+
+  unsigned int iWidth;
+  unsigned int iHeight;
+  unsigned int iDisplayWidth;
+  unsigned int iDisplayHeight;
+
+
+private:
+  int m_iRefCount;
+};
+
 #define DVP_FLAG_TOP_FIELD_FIRST    0x00000001
 #define DVP_FLAG_REPEAT_TOP_FIELD   0x00000002 //Set to indicate that the top field should be repeated
 #define DVP_FLAG_ALLOCATED          0x00000004 //Set to indicate that this has allocated data
