@@ -14,6 +14,7 @@ public:
   virtual void Close();
   virtual int Read(BYTE* buf, int buf_size);
   virtual __int64 Seek(__int64 offset, int whence);
+  virtual bool IsEOF();
 
   virtual void ParseHeaderData(CStdString strData);
   
